@@ -10,6 +10,10 @@ Changes in ogl-es (not yet released - will be merged with trunk at some point)
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Reduce log-messages for "loaded texture" and "loaded mesh" from ELL_INFORMATION to ELL_DEBUG.
+- Add IGUIButton::setOverrideColor to allow overriding text-color (same function as statictexts and editboxes have).
+- Add functions IGUIButton::getClickShiftState and IGUIButton::getClickControlState to get shift/ctrl key-state when a button was clicked. Thanks @StarSonata for patch.
+- Add function ISceneManager::clearAllRegisteredNodesForRendering.
 - Add function IVideoDriver::queryTextureFormat to allow checking if a driver supports textures with a specific color format.
 - ISceneManager::getMesh can now creates meshes with alternative cache-names.
 - Lets the BSP loader find textures inserted with relative paths. Thx@ curaga for patch
